# project_3

./: .flake8  README.md  main.py  pyproject.toml
src/: api.py  data_loader.py  db.py  db_manager.py
